[DT-94] styles: standarized variables and overall structure of css files [DEV-SB]

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,13 +4,16 @@
 
 @import url('./base/_global.css');
 
-/* @import url('./layout/_header.css'); */
-/* @import url('./layout/_footer.css'); */
+@import url('./layout/_header.css');
+@import url('./layout/_footer.css');
 
-/* @import url('./components/_buttons.css') */
+@import url('./components/_buttons.css');
+@import url('./components/_utilities.css');
+
+@import url('./components/_forms.css'); 
 /* @import url('./components/_cards.css') */
-/* @import url('./components/_forms.css') */
 
+@import url('./pages/signup.css');
 /* @import url('./pages/home.css'); */
 /* @import url('./pages/menu.css'); */
 /* @import url('./pages/about.css'); */
