--- a/src/styles/base/_variables.css
+++ b/src/styles/base/_variables.css
@@ -24,21 +24,25 @@
         MOBILE default / xs
     -------------------------------- */
 
-    --fs-h1: 3.2rem;  /* 32px */
-    --fs-h2: 2.4rem;  /* 24px */
-    --fs-h3: 2rem;    /* 20px */
-    --fs-h4: 1.6rem;  /* 16px */
-    --fs-body: 1.4rem;/* 14px */
+    --fs-h1: 1.75rem;     /* 28px */
+    --fs-h2: 1.375rem;    /* 22px */
+    --fs-h3: 1.125rem;    /* 18px */
+    --fs-body: 1rem;      /* 16px */
 
     /* Scale tokens (for components) */
-    --fs-sm: 1.4rem;  /* 14px */
-    --fs-md: 1.6rem;  /* 16px */
-    --fs-lg: 2rem;    /* 20px */
+    --fs-sm: .875rem;  /* 14px */
+    --fs-md: 1rem;  /* 16px */
+    --fs-lg: 1.25rem;    /* 20px */
 
     /* Display / hero section scale */
-    --fs-display-sm: 4rem;     /* 40px */
-    --fs-display-md: 5.6rem;   /* 56px */
-    --fs-display-lg: 7.2rem;   /* 72px */
+    --fs-display-sm: 2.5rem;     /* 40px */
+    --fs-display-md: 3.5rem;   /* 56px */
+    --fs-display-lg: 4.5rem;   /* 72px */
+
+    /* Form tokens */
+    --fs-label: var(--fs-sm);
+    --fs-input: var(--fs-md);
+    --fs-help:  var(--fs-sm);
 
     /* Line heights */
     --lh-heading: 1.15;
@@ -58,11 +62,10 @@
 
 @media (min-width: 768px) {
     :root {
-        --fs-h1: 4.8rem;   /* 48px */
-        --fs-h2: 4rem;     /* 40px */
-        --fs-h3: 3.2rem;   /* 32px */
-        --fs-h4: 2.4rem;   /* 24px */
-        --fs-body: 1.6rem; /* 16px */
+        --fs-h1: 2rem;     /* 32px */
+        --fs-h2: 1.75rem;  /* 28px */
+        --fs-h3: 1.25rem;  /* 20px */
+        --fs-body: 1rem;   /* 16px */
     }
 }
 
@@ -71,10 +74,9 @@
     -------------------------------- */
 @media (min-width: 992px) {
     :root {
-        --fs-h1: 5.6rem;   /* 56px */
-        --fs-h2: 4.8rem;   /* 48px */
-        --fs-h3: 3.2rem;   /* 32px */
-        --fs-h4: 2.4rem;   /* 24px */
-        --fs-body: 2rem;   /* 20px */
+        --fs-h1: 2rem;         /* 32px */
+        --fs-h2: 1.75rem;      /* 28px */
+        --fs-h3: 1.5rem;       /* 24px */
+        --fs-body: 1.125rem;   /* 18px */
     }
 }
