refactor: privacy statement button linked to privacy-policy.html [DEV-MV]

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -38,7 +38,7 @@
 
             <div class="footer-links">
                 <a href="/faqs.html">Preguntas frecuentes</a>
-                <a href="https://docs.google.com/document/d/1Lj7LhDxzLA-bZhMHtreg9beGN7F1b0ot3AoBGYJ2rp0/edit?usp=sharing">Aviso de privacidad</a>
+                <a href="/privacy-policy.html">Aviso de privacidad</a>
             </div>
 
         </div>
