refactor: footer buttons linked to social media pages [DEV-MV]

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -9,13 +9,13 @@
                 </a>
 
                 <div class="footer-social-icons">
-                        <a href="#" title="Facebook">
+                        <a href="https://www.facebook.com/lolos.cafee/" target="_blank" title="Facebook">
                             <img class="h-100" src="/public/icons/facebook-icon.svg" alt="Facebook Icono">
                         </a>
-                        <a href="#" title="Instagram">
+                        <a href="https://www.instagram.com/loloscafee" target="_blank" title="Instagram">
                             <img class="h-100" src="/public/icons/instagram-icon.svg" alt="Instagram Icono">
                         </a>
-                        <a href="#" title="Teléfono">
+                        <a href="tel:+526981123417" title="Teléfono">
                             <img class="h-100" src="/public/icons/cellphone-icon.svg" alt="Celular Icono">
                         </a>
                     </div>
