--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -31,7 +31,7 @@
 
             <div class="footer-block">
                 <h3>Horarios</h3>
-                <p>Martes a Domingo<br>
+                <p>Descansamos los martes<br>
                 11:00 a.m. - 9:00 p.m.
                 </p>
             </div>
