--- a/src/components/header.html
+++ b/src/components/header.html
@@ -23,14 +23,13 @@
             <!-- Right-side buttons -->
             <div class="d-flex align-items-center gap-2 ms-auto me-3 mx-md-auto">
                 <a href="/menu.html" class="menu-btn">MENÚ</a>
-                <a href="/signup.html" class="icon-btn">
+                <a href="/signup/signup.html" class="icon-btn">
                     <svg class="icon" viewBox="0 0 24 24">
                         <circle cx="12" cy="8" r="4" stroke="#31312D" stroke-width="1.5" fill="none" />
                         <path d="M 4 20 Q 4 16 12 16 Q 20 16 20 20" stroke="#31312D" stroke-width="1.5" fill="none"
                             stroke-linecap="round" />
                     </svg>
                 </a>
-
 
                 <a href="#" class="icon-btn position-relative" id="btnOpenCart">
                     <animated-icons class="icon-animated"
@@ -42,8 +41,6 @@
                         class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                         0 </span>
                 </a>
-
-
 
             </div>
             <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain">
