--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,3 +19,7 @@
 @import url('./pages/menu.css');
 @import url('./pages/faq.css');
 /* @import url('./pages/about.css'); */
+
+@import url('./pages/admin-users.css');
+@import url('./pages/admin-configuration.css');
+@import url('./pages/admin-orders.css');
