--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,3 +19,6 @@
 @import url('./pages/menu.css');
 @import url('./pages/faq.css');
 /* @import url('./pages/about.css'); */
+
+@import url('./pages/contact.css');
+/* @import url('./pages/contact.css */
