[DT-165] extract JS and CSS, preserve functionality, and add cart validation [DEV-DM]

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,3 +22,7 @@
 
 @import url('./pages/contact.css');
 /* @import url('./pages/contact.css */
+
+@import url('./pages/menu-cards.css');
+
+@import url('./pages/shopping-cart.css');
