--- a/src/styles/pages/menu-cards.css
+++ b/src/styles/pages/menu-cards.css
@@ -26,7 +26,7 @@
     padding: 10px 0;
 }
 
-.products.top-buttons { /* Space in the top */
+.top-buttons-menu { /* Space in the top */
     padding: 20px 20px 40px 20px;
 }
 
