--- a/src/styles/pages/shopping-cart.css
+++ b/src/styles/pages/shopping-cart.css
@@ -34,8 +34,8 @@
 
 /* Imágenes de los productos (Más grandes) */
 .products#cartItems img {
-    width: 100px !important;
-    height: 100px !important;
+    width: 100px;
+    height: 100px;
     object-fit: contain;
     background-color: #f8f9fa;
     padding: 10px;
@@ -86,20 +86,20 @@
 }
 
 .products#cartTotal {
-    font-size: 2rem !important;
+    font-size: 2rem;
     font-weight: 800;
     color: #000;
     letter-spacing: -1px;
 }
 
 /* Botón Finalizar / Continuar */
-.products .btn-custom-dark {
-    background-color: #000000 !important;
+.products .btn-custom-dark-s {
+    background-color: #000000;
     /* Gris muy oscuro de la imagen */
-    color: white !important;
+    color: white;
     border: none;
-    padding: 1.2rem !important;
-    font-size: 1.1rem !important;
+    padding: 1.2rem;
+    font-size: 1.1rem;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 1.5px;
@@ -107,8 +107,8 @@
     transition: all 0.3s ease;
 }
 
-.products.btn-custom-dark:hover {
-    background-color: #000 !important;
+.products .btn-custom-dark-s:hover {
+    background-color: #000;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
