--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,7 +18,7 @@
 @import url('./pages/admin.css');
 @import url('./pages/menu.css');
 @import url('./pages/faq.css');
-/* @import url('./pages/about.css'); */
+@import url('./pages/about-us.css');
 
 @import url('./pages/contact.css');
 /* @import url('./pages/contact.css */
