--- a/src/styles/pages/menu.css
+++ b/src/styles/pages/menu.css
@@ -1,3 +1,9 @@
+.categories-tabs {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: rgba(255, 255, 255, 0.95);
+}
 .category-card{
   position: relative;
   display: block;
