[DT-163] refactor: reorganize HTML files and apply minor normalization updates in admin pages

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -41,8 +41,8 @@
             </div>
 
             <div class="footer-links">
-                <a href="/faqs.html">Preguntas frecuentes</a>
-                <a href="/privacy-policy.html">Aviso de privacidad</a>
+                <a href="/UI/faqs.html">Preguntas frecuentes</a>
+                <a href="/UI/privacy-policy.html">Aviso de privacidad</a>
             </div>
 
         </div>
