--- a/src/components/sidebar-nav.html
+++ b/src/components/sidebar-nav.html
@@ -14,16 +14,13 @@
             <a class="nav-link" href="/admin/products.html">Productos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/admin/orders">Gestión de pedidos</a>
+            <a class="nav-link" href="/admin/orders.html">Gestión de pedidos</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/admin/users.html">Usuarios</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/admin/menu.html">Menú</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/admin/settings">Configuración</a>
+            <a class="nav-link" href="/admin/configuration.html">Configuración</a>
         </li>
     </ul>
 </div>
