--- a/src/components/header.html
+++ b/src/components/header.html
@@ -15,7 +15,7 @@
                         <a class="nav-link" href="/UI/contact.html">CONTACTO</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about-us.html">NOSOTROS</a>
+                        <a class="nav-link" href="UI/about-us.html">NOSOTROS</a>
                     </li>
                 </ul>
             </div>
