fix: update link for "INICIO" in header navigation and add spacing in cart modal

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -9,7 +9,7 @@
                 <!-- Centered links -->
                 <ul class="navbar-nav mx-auto mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">INICIO</a>
+                        <a class="nav-link" href="/index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/UI/contact.html">CONTACTO</a>
